--- a/detalhes/detalhes.css
+++ b/detalhes/detalhes.css
@@ -77,12 +77,12 @@ body{
 }
 #btnExcluir{
     width: 200px;
-    height: 35px;
     border-radius: 10px;
     background-color: #ffffff;
     border: 3px solid #a60303;
     font-weight: bold;
     margin: 5px;
+    padding: 6px;
 }
 #btnExcluir:hover{
     background-color: #a603033a;
@@ -92,6 +92,7 @@ body{
 .box{
     width: 500px;
     height: 500px;
+    margin-bottom: 10px;
 }
 .box > img{
     width: 100%;
@@ -136,3 +137,52 @@ body{
 }
 
 
+/* Modal */
+ #modalConfirmacao {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background-color: #00000080;
+}
+
+.modalconteudo {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 400px;
+    margin: 100px auto;
+    text-align: center;
+    border: 2px solid #7D5F3B;
+}
+
+.modalconteudo button {
+    width: 200px;
+    margin: 10px;
+    padding: 10px 20px;
+    border: 2px solid;
+    font-weight: bold;
+    margin: 5px;
+    padding: 6px;
+    border-radius: 5px;
+}
+.modalconteudo button:hover{
+    cursor: pointer;
+    box-shadow: 1px 2px 1px;
+}
+
+#excluir{
+    border-color: #a60303;
+    background-color: #a6030369;
+}
+#excluir:hover{
+    box-shadow: 1px 2px 1px #a603033a;
+}
+#cancelar{
+    border-color: #000000;
+    background-color: #00000034;
+}
+#cancelar:hover{
+    box-shadow: 1px 2px 1px #00000034;
+}
